[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tension-detect"
version = "0.1.0"
description = "Detect contradictions in your AI rules and generate judgment boundaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ZUNO WORKS K.K.", email = "seto@zuno.works" }]
keywords = ["ai", "rules", "contradiction", "tension", "mcp", "claude", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["mcp[cli]>=1.0.0"]

[project.urls]
Homepage = "https://github.com/zunoworks/tension-detect"

[project.scripts]
tension-detect = "tension_detect.cli:main"
